--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 
 /* general */
 
-.container-fluid {
+.container {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
@@ -252,9 +252,10 @@ input[type=submit] {
   .main-section{
     max-width: 400px;
     margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin-left: 20px;
-    padding: 5px 20px 5px 20px;
+    margin-right: 20px;
+    padding: 10px 10px 10px 10px;
   }
   
   nav{
