--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,11 +230,8 @@ input[type=submit] {
   }
   
   nav{
-    margin-left: 10px;
-    margin-right: 10px;
     padding-right: 10px;
-    padding-left: 10px;
-    width:0 0 5x 0;
+    
     
   
     
@@ -249,26 +246,61 @@ input[type=submit] {
     position: static;
 
   }
-  .main-section{
+  /* .main-section{
     max-width: 400px;
     margin-top: 5px;
     margin-bottom: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 0px;
+  }
+   */
+   body{
+     margin-top: 268;
+   }
+  nav{
+    padding: 0 10px 0 10px;
+    
+  }
+
+  .work{ 
+    
+    margin-left: 10px;
+    
+    
   }
   
+  
+    
+   
+  
+}
+@media screen and (max-width: 640px) { 
+  .body {
+    margin-top: 140px;
+  }
   nav{
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-    width:0 0 5x 0;
+    margin-top: 20px;
+    justify-content: center;
+    width: 100%;
+    margin:0;
     
   
     
   }
   #logo{
-    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin:0;
   }
+  
+  .auth-image{
+    float: none;
+    margin-left: 20%;
+    padding: 5px;
+  
+
+  }
+
 }
