--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,6 @@ h3, h2 {
   background: #ffffff;
   border: 1px solid #dddddd;
 }
- 
 
 /* portfolio page */
 
@@ -217,13 +216,14 @@ input[type=submit] {
   border: 0 none;
 }
 
-@media screen and (max-width: 980px) { 
+
+ @media screen and (max-width: 980px) { 
   #masthead {
     position: static;
 
   }
   .main-section{
-    max-width: 700px;
+    max-width: 580px;
     margin-top: 0px;
     margin-bottom: auto;
     margin-left: 20px;
@@ -246,7 +246,7 @@ input[type=submit] {
     position: static;
 
   }
-  /* .main-section{
+   .main-section{
     max-width: 400px;
     margin-top: 5px;
     margin-bottom: 20px;
@@ -254,8 +254,8 @@ input[type=submit] {
     margin-right: 20px;
     padding: 10px 10px 10px 0px;
   }
-   */
-   body{
+   
+    body{
      margin-top: 268;
    }
   nav{
@@ -303,4 +303,4 @@ input[type=submit] {
 
   }
 
-}
+} 
